Finishing up writeup

--- a/hw1.tex
+++ b/hw1.tex
@@ -343,7 +343,7 @@ Figure 11 shows a plot of the SSE of the validation set versus $\lambda$. We can
 
 \begin{figure}[!]
 \centering
-\includegraphics[width=3in]{min_lam.png}
+\includegraphics[width=3in]{big_plot.png}
 \caption{SSE of the validation data plotted against the value of $\lambda$ used in \textsc{Ridge-Regression} on the BlogFeedback training data. The minimum occurs at $\lambda = 31746$.}
 \end{figure}
 
